# json-schema-validator-worker

./: .gitignore  build.js  index.html  node-example.js  node-example.ts  package-lock.json  package.json  readme.md  serve.js  tsconfig.declarations.json  tsconfig.json
.github/workflows/: publish.yml
public/: email-metadata.schema.json  test-node.schema.json  test.schema.json
script/src/: index.ts  schema-validator.ts
script/src/worker/: validation-request-handler.ts  worker.ts
src/wasm/: Cargo.toml
wasm/: Cargo.toml  build.sh
wasm/src/: lib.rs  schema_retriever.rs  schema_store.rs  schema_utils.rs
wasm/src/schema_store/: store_utils.rs
