[package]
name = "schema-validator"
version = "0.3.0"
edition = "2021"
authors = ["Laszlo Solova <laszlo@solova.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1.89"
jsonschema = { version = "0.45.0", default-features = false, features = ["resolve-async"] }
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
serde_json = "1.0.149"
wasm-bindgen = "0.2.116"
wasm-bindgen-futures = "0.4.66"

[target.'cfg(target_family="wasm")'.dependencies]
serde-wasm-bindgen = "0.6.5"
web-sys = { version = "0.3.93", features = ["console", "Response", "Window"] }

[dev-dependencies]
tokio = { version = "1.41.1", features = ["full"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
